--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="">
       <div
         class="navbar bg-[#F85559] text-[#FFF] flex flex-col lg:flex-row justify-between rounded-full lg:px-10 lg:py-10 w-11/12 mx-auto">
-        <div class="hidden sm:block">
+        <div class="hidden sm:flex">
           <ul class="gap-7 text-sm flex">
             <li><a href="">Home</a></li>
             <li><a href="">About Us</a></li>
@@ -52,7 +52,7 @@
           <a class="btn btn-ghost normal-case font-bold text-4xl">Fruit Burst</a>
         </div>
         <div class="flex-none gap-2">
-          <div class="hidden md:block">
+          <div class="hidden sm:block">
             <input type="text" placeholder="Search here" class="input rounded-full w-32 md:w-auto" />
             <i class="fa-solid fa-magnifying-glass -ml-10" style="color: #000000;"></i>
           </div>
@@ -65,9 +65,13 @@
             <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-52">
               <li><a href="">Home</a></li>
               <li><a>About Us</a></li>
-              <li><a>Shop<t< /a>
+              <li><a>Shop</a>
               </li>
               <li><a href="">All Fruits</a></li>
+              <li> <div class="">
+                <input type="text" placeholder="Search here" class="input rounded-full w-32 md:w-auto text-xs" />
+                <i class="fa-solid fa-magnifying-glass -ml-10" style="color: #000000;"></i>
+              </div></li>
             </ul>
           </div>
 
@@ -78,7 +82,7 @@
     <!-- Banner with slider section -->
 
     <section class="w-11/12 mx-auto mt-12">
-      <div class="carousel w-full rounded-lg">
+      <div class="carousel w-full rounded-lg relative">
         <div id="slide1" class="carousel-item relative w-full">
           <div class="hero min-h-screen bg-cover" style="background-image: url(images/banner1.png);">
             <div class="hero-overlay bg-opacity-60"></div>
@@ -146,19 +150,19 @@
         </div>
       </div>
       
-        <!-- <div class="flex w-3/4 mx-auto justify-center border-2 border-black">
+        <div class="lg:flex w-4/6 mx-auto justify-center absolute -mt-16 bg-[#FFF] ml-44 px-4 pt-4 hidden">
           <img src="images/fruit1.png" alt="">
           <img src="images/fruit2.png" alt="">
           <img src="images/fruit3.png" alt="">
           <img src="images/fruit4.png" alt="">
           <img src="images/fruit5.png" alt="">
-        </div> -->
+        </div>
     
     </section>
   </header>
   <main>
 <!-- deal of the day section -->
-<section class="w-11/12 mx-auto flex flex-col items-center lg:flex-row mt-32 justify-between ">
+<section class="w-11/12 mx-auto flex flex-col items-center lg:flex-row mt-40 justify-between ">
   <div class="text-center lg:text-start">
     <h2 class="text-3xl lg:text-5xl font-bold lg:font-extrabold mb-5">Deal of the day</h2>
     <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -516,7 +520,7 @@
     </div>
   <div>
    <div class="flex flex-col lg:flex-row space-x-4 justify-center items-center">
-    <div class="flex flex-col-reverse lg:flex-row space-x-4 w-2/3 justify-center items-center">
+    <div class="flex flex-col-reverse lg:flex-row space-x-20 w-full md:w-full lg:w-2/3 justify-center items-center">
       <div class="space-y-4">
         <div class="flex justify-center items-center gap-4">
           <div class="">
@@ -553,7 +557,7 @@
           <img src="images/whychoose1.png" alt="">
         </div>
     </div>
-      <div class="space-y-4 pt-5 w-1/3 m-0">
+      <div class="space-y-4 pt-5 lg:w-1/3 md:w-full w-full m-0">
         <div class="flex justify-center items-center gap-4">
           <div class="">
             <i class="fa-solid fa-leaf fa-2xl" style="color: #2d2e2f;"></i> 
