--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-- nav bar section -->
     <nav class="">
       <div
-        class="navbar bg-[#F85559] text-[#FFF] flex flex-col lg:flex-row justify-between rounded-full lg:px-10 lg:py-10 w-11/12 mx-auto">
+        class="navbar bg-[#F85559] text-[#FFF] flex flex-col lg:flex-row justify-between rounded-full mt-12 lg:px-10 lg:py-10 w-11/12 mx-auto">
         <div class="hidden sm:flex">
-          <ul class="gap-7 text-sm flex">
+          <ul class="gap-7 text:xs sm:text-sm flex">
             <li><a href="">Home</a></li>
             <li><a href="">About Us</a></li>
             <li><a href="">Shop</a></li>
@@ -48,12 +48,12 @@
 
 
         <div class="">
-          <img src="images/logo.png" alt="">
-          <a class="btn btn-ghost normal-case font-bold text-4xl">Fruit Burst</a>
+          <img class="w-4/5 md:w-full" src="./images/logo.png" alt="">
+          <a class="btn btn-ghost normal-case font-bold text-2xl lg:text-4xl">Fruit Burst</a>
         </div>
         <div class="flex-none gap-2">
           <div class="hidden sm:block">
-            <input type="text" placeholder="Search here" class="input rounded-full w-32 md:w-auto" />
+            <input type="text" placeholder="Search here" class="input rounded-full w-96" />
             <i class="fa-solid fa-magnifying-glass -ml-10" style="color: #000000;"></i>
           </div>
           <div class="dropdown dropdown-end text-black sm:hidden lg:hidden">
@@ -151,11 +151,11 @@
       </div>
       
         <div class="lg:flex w-4/6 mx-auto justify-center absolute -mt-16 bg-[#FFF] ml-44 px-4 pt-4 hidden">
-          <img src="images/fruit1.png" alt="">
-          <img src="images/fruit2.png" alt="">
-          <img src="images/fruit3.png" alt="">
-          <img src="images/fruit4.png" alt="">
-          <img src="images/fruit5.png" alt="">
+          <img src="./images/fruit1.png" alt="">
+          <img src="./images/fruit2.png" alt="">
+          <img src="./images/fruit3.png" alt="">
+          <img src="./images/fruit4.png" alt="">
+          <img src="./images/fruit5.png" alt="">
         </div>
     
     </section>
@@ -201,7 +201,7 @@
    <!-- 1st card -->
    <div class="card bg-base-100 shadow-xl">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+      <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title mb-4">12.90$ - 18.85$</h2>
@@ -224,7 +224,7 @@
 <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
   <form method="dialog" class="modal-box">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit6.png" alt="" class="rounded-xl" />
+      <img src="./images/fruit6.png" alt="" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -255,7 +255,7 @@
   <!-- 2nd card  -->
    <div class="card bg-base-100 shadow-xl">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+      <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title mb-4">12.90$ - 18.85$</h2>
@@ -278,7 +278,7 @@
 <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
   <form method="dialog" class="modal-box">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit7.png" alt="" class="rounded-xl" />
+      <img src="./images/fruit7.png" alt="" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -309,7 +309,7 @@
    <!-- 3rd card -->
    <div class="card bg-base-100 shadow-xl">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+      <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title mb-4">12.90$ - 18.85$</h2>
@@ -332,7 +332,7 @@
 <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
   <form method="dialog" class="modal-box">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit8.png" alt="" class="rounded-xl" />
+      <img src="./images/fruit8.png" alt="" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -363,7 +363,7 @@
      <!-- 4th card -->
   <div class="card bg-base-100 shadow-xl">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+      <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title mb-4">12.90$ - 18.85$</h2>
@@ -386,7 +386,7 @@
 <dialog id="my_modal_9" class="modal modal-bottom sm:modal-middle">
   <form method="dialog" class="modal-box">
     <figure class="px-10 pt-10">
-      <img src="/images/fruit9.png" alt="" class="rounded-xl" />
+      <img src="./images/fruit9.png" alt="" class="rounded-xl" />
     </figure>
     <div class="card-body items-center text-center">
       <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -435,7 +435,7 @@
         <div>
           <div class="avatar">
             <div class="w-24 rounded-full">
-              <img src="/images/member1.png" />
+              <img src="./images/member1.png" />
             </div>
           </div>
           <div>
@@ -453,7 +453,7 @@
         <div>
           <div class="avatar">
             <div class="w-24 rounded-full">
-              <img src="/images/member2.png" />
+              <img src="./images/member2.png" />
             </div>
           </div>
           <div>
@@ -471,7 +471,7 @@
         <div>
           <div class="avatar">
             <div class="w-24 rounded-full">
-              <img src="/images/member3.png" />
+              <img src="./images/member3.png" />
             </div>
           </div>
           <div>
@@ -489,7 +489,7 @@
         <div>
           <div class="avatar">
             <div class="w-24 rounded-full">
-              <img src="/images/member4.png" />
+              <img src="./images/member4.png" />
             </div>
           </div>
           <div>
@@ -554,7 +554,7 @@
         </div>
      </div>
         <div class="mb-6">
-          <img src="images/whychoose1.png" alt="">
+          <img src="./images/whychoose1.png" alt="">
         </div>
     </div>
       <div class="space-y-4 pt-5 lg:w-1/3 md:w-full w-full m-0">
@@ -603,7 +603,7 @@
   <footer class="footer footer-center mt-32 p-10 bg-[#121212] text-[#FFF]">
     <div class="mt-8">
       <div class="flex items-center gap-2">
-        <img src="images/logo.png" alt="">
+        <img src="./images/logo.png" alt="">
       <h2 class="text-4xl font-bold">Fruit Burst</h2>
       </div>
       <div class="mt-10">
